...
              icon: const Icon(
                Icons.fingerprint,
                size: 24,
                color: Color(0xFF0F365F),
              ),
              label: Text(
                'Authenticate with Biometric',
                style: Theme.of(context).textTheme.titleSmall?.copyWith(
                      fontFamily: 'Inter',
                      color: const Color(0xFF0F365F),
                      fontSize: 16,
                      letterSpacing: 0.0,
                      fontWeight: FontWeight.bold,
...
                        valueColor: AlwaysStoppedAnimation<Color>(
                          const Color(0xFF0F365F),
                        ),
                      ),
                    )
                  : Text(
                      'Verify Code',
                      style: Theme.of(context).textTheme.titleSmall?.copyWith(
                            fontFamily: 'Inter',
                            color: const Color(0xFF0F365F),
                            fontSize: 16,
                            letterSpacing: 0.0,
                            fontWeight: FontWeight.bold,
...
